# HS-API

./: .buildinfo  .dockerignore  .env.example  .env.prod.example  .gitignore  APICaller.py  APITester.py  DEPLOY.md  Dockerfile  LICENSE  README.md  Tags.py  change_password.py  docker-compose.yaml  entrypoint.sh  genindex.html  gunicorn_conf.py  hackerschool.db  index.html  objects.inv  populate_fake_data.py  py-modindex.html  pyproject.toml  requirements-prod.txt  requirements.txt  ruff.toml  search.html  searchindex.js  start-dev.bat  start-dev.sh  tags.json
.github/workflows/: docs.yml  tests.yml  unittests.yml
API/: APIauth.py  APIlogos.py  APImemberproject.py  APImembers.py  APIprojects.py  handlers.py
_modules/: index.html
_modules/app/: app.html  commands.html  config.html  decorators.html  errors.html  extensions.html  utils.html
_sources/usage-guide/: index.rst.txt
api-reference/: index.html
app/: __init__.py  app.py  commands.py  config.py  decorators.py  errors.py  extensions.py  utils.py
app/access/: __init__.py  access_controller.py  utils.py
app/api/: __init__.py  decorators.py  errors.py  extensions.py
app/auth/: __init__.py  auth_controller.py  permission_strategies.py  utils.py
caddy/: Caddyfile
data/: hackerschool.sqlite3  roles.json  tags.json
databaseHandling/: README.md  database_handler.py  database_test_main.py  login_manager.py  member.py  member_project.py  project.py
development-guide/: index.html
docs/: conf.py  index.rst
resources/: roles.yaml  vikunja.db
src/: config.py
usage-guide/: index.html
(+174 files in other folders)
