[project]
name = "hs-api"
version = "1.0.0"
description = "HS-API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "coverage>=7.10.3",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-migrate>=4.1.0",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "sentry-sdk[flask]>=2.34.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "sqlalchemy>=2.0.42",
]
